2012-04-19  Jeffrey Stedfast  <fejj@gnome.org>

	* README: Bumped version

	* configure.ac: Bumped version to 2.6.8

2012-04-12  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-parser.c (parser_scan_headers): Make sure to
	initialize 'start' before using it to calculate headers_end in the
	case where parser_fill() failed.

	Fixes bug #673493.

2012-03-10  Daniel Gillmor  <dkg@fifthhorseman.net>

	* mono/gmime-sharp.dll.config.in: Fixed missing .so number.

	Fixes bug #671785.

2012-03-09  Jeffrey Stedfast  <fejj@gnome.org>

	* README: Bumped version

	* configure.ac: Bumped version to 2.6.7

2012-03-09  Daniel Gillmor  <dkg@fifthhorseman.net>

	* gmime/gmime-certificate.h: Remove the trailing comma from the
	last enum item to silence gcc -pedantic warnings.

	* gmime/gmime-message.h: Same.

2012-03-09  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-parser.c (parser_step_headers): Be lenient with
	"From " lines found in message headers. Fixes bug #671680.

2012-02-20  Jeffrey Stedfast  <fejj@gnome.org>

	* README: Bumped version

	* configure.ac: Bumped version to 2.6.6

2012-02-20  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-message.c (multipart_guess_body): Fixed
	multipart/signed logic.

2012-02-20  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-common.c (g_mime_strdup_trim): Optimized.

	* gmime/gmime-parser.c (header_parse): Use g_mime_strdup_trim()
	instead of reimplementing the same logic here.

2012-02-20  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-parser.c: Instead of filtering Content-* headers
	inside GMimeObject subclasses, filter them in the parser. This way
	header fetching works as expected in subparts which might have
	non-standard headers (X-* and whatnot).

2012-02-19  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-encodings.c (g_mime_content_encoding_from_string):
	Match non-standard encodings: 7-bit, 8-bit, and x-uue (the
	standard names for these are 7bit, 8bit, and x-uuencode).
